<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/formulario_agregar"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".fragment.AgregarFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_dialogo"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/purple_500"
        android:textSize="20sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_codigo"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:padding="20dp"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/codigo_est"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:hint="@string/codigo_estudiante"
            android:autofillHints=""
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_nombre"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:padding="20dp"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/nombre_est"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="text"
            android:background="@android:color/transparent"
            android:hint="@string/nombre_estudiante"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_fecha"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:padding="20dp"
        android:focusable="false"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/fecha_est"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:focusable="false"
            android:background="@android:color/transparent"
            android:inputType="none"
            android:hint="@string/fecha_nacimiento"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/notas_estudiante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_nota1"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:padding="20dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/nota1_est"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="number"
                android:background="@android:color/transparent"
                android:hint="@string/nota1"
                android:autofillHints="" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_nota2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:padding="20dp"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/nota2_est"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="number"
                android:background="@android:color/transparent"
                android:hint="@string/nota2"
                android:autofillHints="" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_nota3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:padding="20dp"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/nota3_est"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="number"
                android:background="@android:color/transparent"
                android:hint="@string/nota3"
                android:autofillHints="" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/agregar_estudiante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/agregar_estudiante" />
</LinearLayout>